# Hypastack-Open-Source

./: .dockerignore  .env.example  .gitignore  2026-06-11-ZAP-Report-.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  check_vars.js  check_vars_2.js  clean_css.js  deep_clean.js  instrumentation.node.ts  instrumentation.ts  mdx-components.tsx  middleware.ts  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo  vitest.config.ts
.github/: FUNDING.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
components/: console-greeting.tsx  context-menu-uploader.tsx  cta-section.tsx  demo-banner.tsx  desktop-gate.tsx  desktop-guard.tsx  faq-data.ts  faq.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  page-logo.tsx  preferences-modal.tsx  pricing-cards.tsx  pricing-comparison.tsx  pricing.tsx  status-banner.tsx  tauri-titlebar.tsx  tier-announcement-modal.tsx  upload-zone.tsx
constants/: credits.ts  errors.ts  footer.ts  icon-codepoints.ts  inactivity.ts  index.ts  integrations.ts  languages.ts  navigation.ts  plans.ts  profile.ts  proxy.ts  rate-limits.ts  security.ts  site.ts  storage-keys.ts  tier-limits.ts  tiers.ts  upload.ts
docs/: biometric-unlock-spec.md
hooks/: useAuth.tsx  useDeveloperMode.tsx  useLanguage.tsx  useManage.tsx  useTheme.tsx  (+1 more)
src-tauri/: Cargo.toml
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  titlebar.js
(+383 files in other folders)
