[package]
name = "hypastack"
version = "9.7.1"
edition = "2021"

[lib]
name = "hypastack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
